--- a/style.css
+++ b/style.css
@@ -29,10 +29,23 @@ body {
   display: none;
 }
 
+.section1 {
+  background-image: url(./images/bg-main-mobile.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.paymentCard-design {
+  background-image: url(./images/bg-card-back.png);
+  background-size: cover;
+  width: 350px;
+  height: 190px;
+}
+
 label {
-  font-size: 15px;
+  font-size: 13px;
   text-transform: uppercase;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
   display: block;
   white-space: nowrap;
   color: var(--col-Very-dark-violet);
@@ -52,6 +65,7 @@ input[type="text"] {
 }
 input[type="text"]::placeholder {
   color: rgb(186, 180, 180);
+  font-size: 13px;
 }
 .expDate-Cvc-Container {
   display: flex;
@@ -70,7 +84,7 @@ input[type="text"]::placeholder {
 
 button {
   width: 100%;
-  padding: 17px;
+  padding: 12px;
   border: none;
   border-radius: 7px;
   background-color: var(--col-Very-dark-violet);
@@ -84,12 +98,10 @@ button {
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-
-  position: absolute;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  padding: 2em 2.2em;
+  padding: 1.2em 2.2em;
   justify-content: space-between;
 }
 
@@ -107,7 +119,6 @@ button {
 }
 .card-info > p {
   color: var(--col-White);
-  font-size: 25px;
   letter-spacing: 4px;
   word-spacing: 5px;
   font-weight: 500;
@@ -136,39 +147,47 @@ button {
   width: 100%;
   height: 40%;
 }
-@media(min-width:450px) and (max-width:1150px){
+
+.section1 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+  width: 100vw;
+}
+
+@media (min-width: 450px) and (max-width: 1150px) {
   main {
     display: flex;
     flex-direction: column;
-    height: 100vh;
     width: 100vw;
+    height: 100vh;
     margin: auto;
   }
-  .bg-img-mobile{
-    display: block;
-    width: 100%;
-    height: 18em;
-    position: relative;
+
+  .section1 {
+    height: 15em;
   }
-  .card-design {
-    position: absolute;
-    top: 5%;
-    left: 33%;
-    width: 400px;
-    height: 230px;
+
+  .paymentCard-design {
+    width: 350px;
+    height: 190px;
+    grid-column: 2/3;
+    grid-row: 2 / span 5;
+    transform: translate(10%, 18%);
   }
+
   .payment-card {
-    position: absolute;
-    width: 400px;
-    height: 230px;
-    left: 22%;
-    top: 20%;
+    grid-column: 2/3;
+    grid-row: 5 / span 5;
+    width: 350px;
+    height: 190px;
+    transform: translate(-5%, 10%);
   }
+
   #form {
-    margin-top: 10em;
+    margin-top: 7em;
     width: 450px;
     padding: 2em;
-    
   }
   .section2 {
     flex: 2;
@@ -178,8 +197,8 @@ button {
     justify-content: center;
     padding: 0 10em;
   }
-  .card-info > p{
-    font-size: 20px;
+  .card-info > p {
+    font-size: 17px;
   }
 }
 @media (min-width: 1150px) {
@@ -191,7 +210,8 @@ button {
   }
 
   .section1 {
-    background-color: cadetblue;
+    display: flex;
+    background-image: url(./images/bg-main-desktop.png);
     flex: 1;
   }
   .section2 {
@@ -206,7 +226,6 @@ button {
     width: 50%;
     margin-left: 10em;
     min-width: 20em;
-
   }
   .bg-img-desktop {
     display: block;
@@ -214,44 +233,42 @@ button {
     height: 100%;
   }
   .bg-imgs {
-    background-color: aquamarine;
     position: relative;
     width: 100%;
     height: 100%;
   }
 
-  .card-design {
+  input[type="text"] {
+    padding: 15px;
+    border-radius: 7px;
+    margin: 10px 0 35px 0;
+  }
+
+  button {
+    margin: 35px 0;
+  }
+  .section1 {
+    position: relative;
+  }
+
+  .paymentCard-design {
     position: absolute;
-    top: 30em;
+    top: 27em;
     left: 13em;
-    width: 470px;
-    height: 270px;
+    width: 420px;
+    height: 220px;
+    border-radius: 7px;
   }
   .payment-card {
     position: absolute;
-    width: 470px;
-    height: 270px;
+    width: 420px;
+    height: 220px;
     top: 8em;
     left: 8em;
   }
 
-  input[type="text"] {
-    font-family: var(--ff);
-    padding: 15px;
-    border-radius: 7px;
-    font-size: var(--fs);
-    margin: 15px 0 40px 0;
-  }
-
-  button {
-    width: 100%;
-    padding: 17px;
-    border: none;
-    border-radius: 7px;
-    background-color: var(--col-Very-dark-violet);
-    color: var(--col-White);
-    font-size: 15px;
-    margin: 35px 0;
+  .card-info > p {
+    font-size: 20px;
   }
 }
 @media (max-width: 450px) {
@@ -259,9 +276,13 @@ button {
     width: 100%;
   }
 
+  .section1 {
+    height: 15em;
+  }
+
   .section2 {
-    margin-top: 80px;
-    padding: 20px;
+    margin-top: 3em;
+        padding: 20px;
     height: auto;
   }
   .bg-img-mobile {
@@ -276,13 +297,8 @@ button {
     top: 30px;
     left: 60px;
   }
-  .payment-card {
-    padding: 1.5rem 1.8rem;
-    position: absolute;
-    width: 317px;
-    height: 171px;
-    left: 20px;
-    top: 130px;
+  #form{
+  
   }
 
   .big-cercle {
@@ -294,14 +310,25 @@ button {
     height: 10px;
   }
   .card-info > p {
-    color: var(--col-White);
     font-size: 1rem;
-    white-space: nowrap;
-    letter-spacing: 4px;
-    word-spacing: 5px;
-    font-weight: 500;
   }
   .card-info {
     height: 45%;
+  }
+
+  .paymentCard-design {
+    width: 317px;
+    height: 171px;
+    grid-column: 2/3;
+    grid-row: 2 / span 5;
+    transform: translate(10%, 18%);
+  }
+
+  .payment-card {
+    grid-column: 2/3;
+    grid-row: 5 / span 5;
+    width: 317px;
+    height: 171px;
+    transform: translate(-10%, 10%);
   }
 }
