--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ label {
   display: block;
   white-space: nowrap;
   color: var(--col-Very-dark-violet);
+  margin-top: 25px;
 }
 .card-owner > label {
   display: block;
@@ -61,12 +62,19 @@ input[type="text"] {
   border: 1px solid var(--col-Light-grayish-violet);
   border-radius: 7px;
   font-size: var(--fs);
-  margin: 15px 0 25px 0;
+  margin-top: 15px;
+  margin-bottom: 5px;
+ 
+}
+ input:focus{
+  outline: none; /* Remove the default focus outline */
+   border-color: blue; /* Set the border color when focused */
 }
 input[type="text"]::placeholder {
   color: rgb(186, 180, 180);
   font-size: 13px;
 }
+
 .expDate-Cvc-Container {
   display: flex;
   column-gap: 20px;
@@ -281,8 +289,8 @@ button {
   }
 
   .section2 {
-    margin-top: 3em;
-        padding: 20px;
+    margin-top: 7em;
+    padding: 20px;
     height: auto;
   }
   .bg-img-mobile {
@@ -296,9 +304,6 @@ button {
     position: absolute;
     top: 30px;
     left: 60px;
-  }
-  #form{
-  
   }
 
   .big-cercle {
@@ -331,4 +336,11 @@ button {
     height: 171px;
     transform: translate(-10%, 10%);
   }
+}
+
+
+#message{
+font-size: 12px;
+color: red;
+
 }
